# fmp-playground

./: .gitignore  README.md  pyproject.toml
fmp_playground/: logging_config.py  main.py  utils.py
tools/: setup_mongo.py
